--- a/Static/Css/variable.css
+++ b/Static/Css/variable.css
@@ -23,7 +23,7 @@
     --red: red;
 
 
-    /* _______________  bg color in section _______________ */
+    /* _______  bg color in section ______ */
     --modal-bg: #1a161656;
 
 
